drivers/gpu/drm/i915/display/intel_hdmi.c
@@ -2638,6 +2638,12 @@ out:
 	 */
 	intel_display_power_flush_work(dev_priv);
 
+	/*
+	 * Make sure the refs for power wells enabled during detect are
+	 * dropped to avoid a new detect cycle triggered by HPD polling.
+	 */
+	intel_display_power_flush_work(dev_priv);
+
 	return status;
 }
 
